k8s/hivemq-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hivemq4-service
spec:
  type: LoadBalancer
  selector:
    app: hivemq4
    ver: 4.7.1
  ports:
  - name: admin-console
    port: 8080
    targetPort: 8080
  - name: mqtt-tcp
    port: 1883
    targetPort: 1883
  - name: mqtt-ws
    port: 8000
    targetPort: 8000
  - name: mqtt-wss
    port: 8001
    targetPort: 8001

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hivemq4-deployment
spec:
  selector:
    matchLabels:
      app: hivemq4
      ver: 4.7.1
  template:
    metadata:
      labels:
        app: hivemq4
        ver: 4.7.1
    spec:
      containers:
      - name: hivemq4
        image: hivemq/hivemq4:4.7.1
        resources:
          requests:
            memory: "64Mi"
            cpu: "500m"
          limits:
            memory: "512Mi"
            cpu: "2000m"
        ports:
        - name: admin-console
          containerPort: 8080
        - name: mqtt-tcp
          containerPort: 1883
        - name: mqtt-ws
          containerPort: 8000
        - name: mqtt-wss
          containerPort: 8001
        volumeMounts:
        - name: jks-keystore
          mountPath: "/usr/local/secrets/jks-keystore"
          readOnly: true

      volumes:
      - name: jks-keystore
        secret:
          secretName: hivemq4-selfsigned-secret
          items:
            - key: keystore.jks
              path: /opt/hivemq-4.7.1/conf/keystore.jks
