k8s/nginx-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
spec:
  rules:
    - host: kwonghung-yip.asuscomm.com
      http:  
        paths:
          - path: /
            backend:
              serviceName: nginxx-service
              servicePort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  type: ClusterIP
  selector:
    app: nginx
    ver: 1.21
  ports:
  - name: http
    port: 80
  - name: https
    port: 443

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  selector:
    matchLabels:
      app: nginx
      ver: 1.21
  template:
    metadata:
      labels:
        app: nginx
        ver: 1.21
    spec:
      containers:
      - name: nginx
        image: docker.io/nginx:1.21
        resources:
          requests:
            memory: "32Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - name: http
          containerPort: 80
        - name: https
          containerPort: 443
